# itw-moov-web

./: .editorconfig  .env.prod  .gitignore  MANIFEST.in  README.md  centos.sh  ecosystem.config.js  moov-web.conf  moov-web.log.1  moov-web.log.10  moov-web.log.3  moov-web.log.6  moov-web.log.8  moov-web.log.9  package.py  pyproject.toml  requirements.txt  setting.py  setup.cfg
.github/workflows/: deploy.yml
app/: __init__.py  ads.py  base.py  cli.py  config.py  contact.py  drugstores.py  forex.py  home.py  magazine.py  news.py  preview.py  search.py  utils.py
app/assets/scripts/: main-6731bc2efb0608c06434.js  main-6731bc2efb0608c06434.js.br
app/assets/styles/: custom-responsive.css  custom.css  main-4eca6c8dbda212f15ad7.css  main-4eca6c8dbda212f15ad7.css.br
app/templates/: 404.html  actualite.html  actualites.html  base.html  category.html  coming_soon.html  contact.html  exchange_rate.html  index.html  mention.html  pharmacie.html  recherche.html  search.html  tendance.html
app/templates/includes/: pagination.html
moov/: Procfile  __init__.py  article.py  config.py  contact.py  drugstores.py  forex.py  home.py  life.py  magazine.py  news.py  preview.py  redirection.py  search.py  utils.py  wsgi.py
moov/api/: cli.py
moov/api/data/: category.csv
moov/assets/data/: category.csv
moov/assets/scripts/: custom-script.js  main-6731bc2efb0608c06434.js  main-6731bc2efb0608c06434.js.map  manifest-338105182854d6bd0d7f.js  manifest-338105182854d6bd0d7f.js.map  popover.js
moov/assets/styles/: custom-responsive.css  custom.css  main-4eca6c8dbda212f15ad7.css  popover.css  theme-update.css
moov/etl/: __init__.py  actualities.py  afp.py  drugstores.py  forex.py
moov/etl/legacy_extractor/: const.py  mapping.py  resolve.py
moov/etl/legacy_extractor/models/: drupal.py  strapi.py
moov/templates/: actualite.html  actualite2.html  actualites.html  base.html  category.html  contact.html  exchange.html  exchange_rate.html  index.html  mention.html  meteo.html  pharmacie.html  search.html  tendance.html
moov/templates/includes/: analytics-noscript.html  analytics.html  noscript.html  share-popover.html
moov/test/: test_image_size.py
