[tool.poetry]
name = "moov-proto"
version = "0.1.0"
description = ""
authors = ["Unviray <unviray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
gunicorn = "^20.1.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
run_server.env = { FLASK_ENV = "development" }
run_server.cmd = "flask run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
