[metadata]
name = moov-website
version = 0.1.0
author = codeandscale
author_email = contact@codeandscale.com
description = Moov Website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codeandscale/moov-proto
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =.
packages = find:
python_requires = >=3.8.10
install_requires =
    black ==22.1.0
    beautifulsoup4 ==4.10.0
    build ==0.7.0
    click ==8.0.4
    ipython ==8.0.1
    markdown2 ==2.4.2
    flask ==2.0.2
    Flask-WTF ==1.0.0
    gunicorn ==20.1.0
    requests ==2.26.0
    WTForms ==3.0.1

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    moov = app.cli:cmd