[metadata]
name = moov
version = 0.1.1
author = codeandscale
author_email = contact@codeandscale.com
description = Moov Website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codeandscale/moov-proto
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =.
packages = find:
include_package_data = true
python_requires = >=3.8.10
install_requires =
    black ==22.1.0
    beautifulsoup4 ==4.10.0
    build ==0.7.0
    click ==8.0.4
    ipython ==8.0.1
    markdown2 ==2.4.2
    flask ==2.0.2
    Flask-WTF ==1.0.0
    gunicorn ==20.1.0
    requests ==2.26.0
    WTForms ==3.0.1
    openpyxl ==3.0.9
    pandas ==1.4.1
    PyMySQL >=1.0.2
    rich >=10.14.0
    cryptography >=36.0.0
    tqdm >=4.62.3
    pydantic >=1.8.2
    peewee >=3.14.8
    requests
    requests-html

[options.package_data]
moov = templates/*,templates/includes/*,assets/fonts/*,assets/images/*,assets/media/*,assets/scripts/*,assets/styles/*

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    moov = moov.api.cli:cmd